--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         const upperS = sym.toUpperCase();
         
 const sources = [
-            `https://bin.bnbstatic.com/static/assets/logos/${S}.png`,           // 1. Binance
+            `https://bin.bnbstatic.com/static/assets/logos/${upperS}.png`,           // 1. Binance
             `https://s1.bycsi.com/bybit/assets/tokens/colors/${s}.png`,
         ];
 
