--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         const upperS = sym.toUpperCase();
         
 const sources = [
-            `https://bin.bnbstatic.com/static/assets/logos/${upperS}.png`,           // 1. Binance
-            `https://s1.bycsi.com/bybit/assets/tokens/colors/${s}.png`,
+            `https://indodax.com/v2/logo/png/color/${s}.png`,                  // 3. Indodax
+            `https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${S}.png`, // 4. MEXC
         ];
 
         if (retry < sources.length) {
