--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         
 const sources = [
             `https://indodax.com/v2/logo/png/color/${s}.png`,                  // 3. Indodax
-            `https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${S}.png`, // 4. MEXC
+            `https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${upperS}.png`, // 4. MEXC
         ];
 
         if (retry < sources.length) {
