--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         const upperS = sym.toUpperCase();
         
 const sources = [
-            `https://indodax.com/v2/logo/png/color/${s}.png`,                  // 3. Indodax
-            `https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${upperS}.png`, // 4. MEXC
+`https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${upperS}.png`, // 4. MEXC
+            `https://gimg2.gateimg.com/coin_icon/${upperS}.png`, // 4. MEXC
         ];
 
         if (retry < sources.length) {
