--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
         const upperS = sym.toUpperCase();
         
 const sources = [
-            `https://mexc-img.oss-cn-hangzhou.aliyuncs.com/static/token/${upperS}.png`, // 4. MEXC
-            `https://gimg2.gateimg.com/coin_icon/${upperS}.png`, // 4. MEXC
+            `https://static.okx.com/cdn/oksupport/asset/currency/icon/${s}.png`, // 6. OKX
+            `https://coinicons-api.vercel.app/api/icon/${s}`,                  // 7. CryptoIcon
+            `https://assets.coincap.io/assets/icons/${s}@2x.png`// 4. MEXC
         ];
 
         if (retry < sources.length) {
