--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         </div>
         <div style="height:10px"></div>
         <div class="coin-card" style="border-left: 4px solid #f7931a;">
-            <div class="logo-wrapper"><img src="https://binance-docs.github.io/apidocs/spot/en/img/logos/btc.png" onerror="handleLogoError(this, 'BTC')"></div>
+            <div class="logo-wrapper"><img src="https://icon.staticimgs.com/images/coin_icon/64/btc.png" onerror="handleLogoError(this, 'BTC')"></div>
             <div class="info-group"><label>BTC</label><span id="price-btc" class="live-price">$0</span></div>
             <div class="input-box"><input type="text" id="btc" inputmode="decimal" placeholder="0" oninput="handleInput('btc')"></div>
             <span id="change-btc" class="price-change">--</span>
         </div>
         <div style="height:10px"></div>
         <div class="coin-card" style="border-left: 4px solid #627eea;">
-            <div class="logo-wrapper"><img src="https://binance-docs.github.io/apidocs/spot/en/img/logos/eth.png" onerror="handleLogoError(this, 'ETH')"></div>
+           <div class="logo-wrapper"><img src="https://icon.staticimgs.com/images/coin_icon/64/eth.png" onerror="handleLogoError(this, 'ETH')"></div>
             <div class="info-group"><label>ETH</label><span id="price-eth" class="live-price">$0</span></div>
             <div class="input-box"><input type="text" id="eth" inputmode="decimal" placeholder="0" oninput="handleInput('eth')"></div>
             <span id="change-eth" class="price-change">--</span>
@@ -265,7 +265,7 @@ function handleLogoError(img, sym) {
                 <div class="coin-row">
                     <div class="coin-card">
                         <div class="logo-wrapper">
-                            <img src="https://binance-docs.github.io/apidocs/spot/en/img/logos/${id}.png" onerror="handleLogoError(this, '${sym}')">
+                           <img src="https://icon.staticimgs.com/images/coin_icon/64/${id}.png" onerror="handleLogoError(this, '${sym}')">
                         </div>
                         <div class="info-group"><label>${sym}</label><span class="live-price">${formatPriceDisplay(p)}</span></div>
                         <div class="input-box"><input type="text" id="${id}" inputmode="decimal" placeholder="0" oninput="handleInput('${id}')"></div>
